# crypto-paillier-cpp

./: CMakeLists.txt  README.md
cmake/: CryptoPaillierConfig.cmake.in
examples/: CMakeLists.txt  paillier-test.cpp
proto/: paillier.proto
src/: CMakeLists.txt
src/crypto-paillier/: pail.cpp  pail.h  pail_privkey.cpp  pail_privkey.h  pail_pubkey.cpp  pail_pubkey.h  paillier.pb.cc  paillier.pb.h
test/: CMakeLists.txt  paillier-test.cpp
